@@ -44,80 +44,32 @@ public class StudentServiceImpl implements StudentService
     {
         log.info("Attempting to create student with PAN: {}", studentRequestDto.getPanNumber());
 
-        if (studentRepository.existsById(studentRequestDto.getPanNumber()))
-        {
-            throw new AlreadyExistException("Student already exists with PAN: " + studentRequestDto.getPanNumber());
-        }
+        validateStudentDoesNotExist(studentRequestDto.getPanNumber());
 
-        User user = userRepository.findByPanNumberIgnoreCase(studentRequestDto.getPanNumber())
-                .orElseThrow(() -> new ResourceNotFoundException(
-                        "Student User not found with PAN: " + studentRequestDto.getPanNumber()));
+        User user = fetchUserByPan(studentRequestDto.getPanNumber());
+        ClassEntity classEntity = fetchClassEntity(studentRequestDto.getClassId());
+        Session session = fetchSession(studentRequestDto.getSessionId());
 
-        ClassEntity classEntity = EntityFetcher.fetchByIdOrThrow(
-                classEntityRepository,
-                studentRequestDto.getClassId(),
-                EntityNames.CLASS_ENTITY);
-
-        Session session = EntityFetcher.fetchByIdOrThrow(
-                sessionRepository,
-                studentRequestDto.getSessionId(),
-                EntityNames.SESSION);
-
-
-        // Check if another class with same name and session already exists
-        Optional<ClassEntity> duplicateClass = classEntityRepository
-                .findByClassNameIgnoreCaseAndSessionId(classEntity.getClassName(), studentRequestDto.getSessionId());
-
-        if (duplicateClass.isPresent() && !duplicateClass.get().getId().equals(classEntity.getId()))
-        {
-            throw new AlreadyExistException("Class already exists with name: " + classEntity.getClassName() +
-                    " for the selected session.");
-        }
-
-        if (!session.isActive())
-        {
-            log.warn("Cannot add student to inactive session with ID {}", session.getId());
-            throw new WrongArgumentException("Cannot add student to an inactive session");
-        }
+        validateClassAndSession(classEntity, session);
 
         Student student = modelMapper.map(studentRequestDto, Student.class);
         student.setStatus(UserStatus.ACTIVE);
-
-        Integer maxRoll = studentRepository.findMaxClassRollNumberByCurrentClassId(studentRequestDto.getClassId());
-        student.setClassRollNumber((maxRoll != null ? maxRoll : 0) + 1);
-
+        student.setClassRollNumber(getNextRollNumber(studentRequestDto.getClassId()));
         student.setCurrentClass(classEntity);
         student.setUser(user);
         student.setSession(session);
 
         Student savedStudent = studentRepository.save(student);
 
-        FeeStructure feeStructure = feeStructureRepository.findByClassEntity_IdAndSession_Id(studentRequestDto.getClassId(), studentRequestDto.getSessionId())
-                .orElseThrow(() -> new ResourceNotFoundException("Fee structure not found for class and session"));
-
-        List<Fee> feeEntries = new ArrayList<>();
-        LocalDate currentMonth = session.getStartDate().withDayOfMonth(1);
-
-        for (int i = 0; i < 12; i++)
-        {
-            Fee fee = new Fee();
-            fee.setMonth(FeeMonth.valueOf(currentMonth.getMonth().toString()));
-            fee.setYear(currentMonth.getYear());
-            fee.setStatus(FeeStatus.PENDING);
-            fee.setAmount(feeStructure.getFeesAmount());
-            fee.setFeeStructure(feeStructure);
-            fee.setDueDate(currentMonth.withDayOfMonth(15));
-            fee.setStudent(savedStudent);
-            feeEntries.add(fee);
-            currentMonth = currentMonth.plusMonths(1);
-        }
-        feeRepository.saveAll(feeEntries);
+        createAndSaveFeesForStudent(savedStudent, studentRequestDto.getClassId(), studentRequestDto.getSessionId(), session);
 
         log.info("Student created successfully with PAN: {}", studentRequestDto.getPanNumber());
-        StudentResponseDto studentResponseDto = convertToDto(savedStudent);
-        studentResponseDto.setFeeCatalogStatus(FeeCatalogStatus.PENDING);
-        studentResponseDto.setFeeStatus(FeeStatus.PENDING);
-        return studentResponseDto;
+
+        StudentResponseDto responseDto = convertToDto(savedStudent);
+        responseDto.setFeeCatalogStatus(FeeCatalogStatus.PENDING);
+        responseDto.setFeeStatus(FeeStatus.PENDING);
+
+        return responseDto;
     }
 
     @Transactional
@@ -127,11 +79,11 @@ public class StudentServiceImpl implements StudentService
         List<Student> students = new ArrayList<>();
         List<User> users = new ArrayList<>();
 
-        for (String panNumber : panNumbers)
+        for (String pan : panNumbers)
         {
-            Student student = EntityFetcher.fetchByIdOrThrow(studentRepository, panNumber, EntityNames.STUDENT);
-
+            Student student = EntityFetcher.fetchByIdOrThrow(studentRepository, pan, EntityNames.STUDENT);
             User user = student.getUser();
+
             if (user != null)
             {
                 user.setEnabled(false);
@@ -150,7 +102,6 @@ public class StudentServiceImpl implements StudentService
     public List<StudentResponseDto> getStudentsByClassId(Long classId)
     {
         log.info("Fetching students by class ID: {}", classId);
-
         ClassEntity classEntity = classEntityRepository.findById(classId)
                 .orElseThrow(() -> new ResourceNotFoundException("Class not found with ID: " + classId));
 
@@ -168,7 +119,7 @@ public class StudentServiceImpl implements StudentService
                     setFeeStatuses(dto, student.getPanNumber());
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -182,7 +133,7 @@ public class StudentServiceImpl implements StudentService
                     setFeeStatuses(dto, student.getPanNumber());
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -203,7 +154,7 @@ public class StudentServiceImpl implements StudentService
                     setFeeStatuses(dto, student.getPanNumber());
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -212,45 +163,35 @@ public class StudentServiceImpl implements StudentService
         log.info("Fetching student with PAN: {}", pan);
         Student fetchedStudent = EntityFetcher.fetchStudentByPan(studentRepository, pan);
 
-        StudentResponseDto studentResponseDto = convertToDto(fetchedStudent);
-        setFeeStatuses(studentResponseDto, pan);
-        log.info("Student fetched successfully with PAN: {}", pan);
+        StudentResponseDto dto = convertToDto(fetchedStudent);
+        setFeeStatuses(dto, pan);
 
-        return studentResponseDto;
+        log.info("Student fetched successfully with PAN: {}", pan);
+        return dto;
     }
 
     @Override
-    public StudentResponseDto updateStudent(String pan, UpdateStudentInfo updateStudentInfo) //Only Active students can be change
+    public StudentResponseDto updateStudent(String pan, UpdateStudentInfo updateStudentInfo)
     {
         log.info("Updating student with PAN: {}", pan);
 
         Student fetchedStudent = EntityFetcher.fetchStudentByPan(studentRepository, pan);
-        if (!fetchedStudent.getStatus().equals(UserStatus.ACTIVE))
-        {
-            log.info("Update not allowed. Student with PAN {} has status: {}",
-                    fetchedStudent.getPanNumber(), fetchedStudent.getStatus());
-            throw new WrongArgumentException(
-                    "Only active students can be changed. Student with PAN " +
-                            fetchedStudent.getPanNumber() + " is currently " +
-                            fetchedStudent.getStatus().name().toLowerCase() + ".");
-        }
 
-        if (!fetchedStudent.getSession().isActive())
-        {
-            throw new WrongArgumentException("Cannot update student because the session is inactive");
-        }
+        validateStudentIsActive(fetchedStudent);
+        validateSessionIsActive(fetchedStudent);
 
         modelMapper.map(updateStudentInfo, fetchedStudent);
         fetchedStudent.setPanNumber(pan);
 
         Student updatedStudent = studentRepository.save(fetchedStudent);
+
         log.info("Student updated successfully with PAN: {}", pan);
 
-        StudentResponseDto studentResponseDto = convertToDto(updatedStudent);
-        setFeeStatuses(studentResponseDto, pan);
-        return studentResponseDto;
-    }
+        StudentResponseDto dto = convertToDto(updatedStudent);
+        setFeeStatuses(dto, pan);
 
+        return dto;
+    }
 
     @Override
     public CurrentDayAttendance getStudentsPresentToday(Optional<Long> classId)
@@ -294,7 +235,8 @@ public class StudentServiceImpl implements StudentService
                     dto.setPanNumber(student.getPanNumber());
                     dto.setPresent(true);
                     return dto;
-                }).collect(Collectors.toList());
+                })
+                .collect(Collectors.toList());
 
         result.setDate(LocalDate.now());
         result.setStudentAttendances(studentAttendances);
@@ -302,13 +244,13 @@ public class StudentServiceImpl implements StudentService
         return result;
     }
 
-
+    // Overloaded methods for convenience
     public List<StudentAttendance> getStudentsPresentToday()
     {
         log.info("Fetching today's present students");
         return studentRepository.findStudentsPresentToday().stream()
                 .map(student -> modelMapper.map(student, StudentAttendance.class))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public CurrentDayAttendance getStudentsPresentTodayByClass(Long classId)
@@ -326,8 +268,7 @@ public class StudentServiceImpl implements StudentService
         LocalDateTime startOfDay = today.atStartOfDay();
         LocalDateTime endOfDay = today.atTime(LocalTime.MAX);
 
-        List<Student> presentStudents = studentRepository
-                .findStudentsPresentTodayByClassId(classId, startOfDay, endOfDay); // Custom query
+        List<Student> presentStudents = studentRepository.findStudentsPresentTodayByClassId(classId, startOfDay, endOfDay);
 
         List<StudentAttendance> studentAttendances = presentStudents.stream()
                 .map(student ->
@@ -337,7 +278,7 @@ public class StudentServiceImpl implements StudentService
                     dto.setPresent(true);
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
 
         CurrentDayAttendance result = new CurrentDayAttendance();
         result.setId(classEntity.getId());
@@ -347,6 +288,102 @@ public class StudentServiceImpl implements StudentService
         result.setStudentAttendances(studentAttendances);
 
         return result;
+    }
+
+    // Private helper methods
+
+    private void validateStudentDoesNotExist(String panNumber)
+    {
+        if (studentRepository.existsById(panNumber))
+        {
+            throw new AlreadyExistException("Student already exists with PAN: " + panNumber);
+        }
+    }
+
+    private User fetchUserByPan(String panNumber)
+    {
+        return userRepository.findByPanNumberIgnoreCase(panNumber)
+                .orElseThrow(() -> new ResourceNotFoundException("Student User not found with PAN: " + panNumber));
+    }
+
+    private ClassEntity fetchClassEntity(Long classId)
+    {
+        return EntityFetcher.fetchByIdOrThrow(classEntityRepository, classId, EntityNames.CLASS_ENTITY);
+    }
+
+    private Session fetchSession(Long sessionId)
+    {
+        return EntityFetcher.fetchByIdOrThrow(sessionRepository, sessionId, EntityNames.SESSION);
+    }
+
+    private void validateClassAndSession(ClassEntity classEntity, Session session)
+    {
+        // Check duplicate class for same name and session
+        Optional<ClassEntity> duplicateClass = classEntityRepository
+                .findByClassNameIgnoreCaseAndSessionId(classEntity.getClassName(), session.getId());
+
+        if (duplicateClass.isPresent() && !duplicateClass.get().getId().equals(classEntity.getId()))
+        {
+            throw new AlreadyExistException("Class already exists with name: " + classEntity.getClassName()
+                    + " for the selected session.");
+        }
+
+        if (!session.isActive())
+        {
+            log.warn("Cannot add student to inactive session with ID {}", session.getId());
+            throw new WrongArgumentException("Cannot add student to an inactive session");
+        }
+    }
+
+    private Integer getNextRollNumber(Long classId)
+    {
+        Integer maxRoll = studentRepository.findMaxClassRollNumberByCurrentClassId(classId);
+        return (maxRoll != null ? maxRoll : 0) + 1;
+    }
+
+    private void createAndSaveFeesForStudent(Student student, Long classId, Long sessionId, Session session)
+    {
+        FeeStructure feeStructure = feeStructureRepository
+                .findByClassEntity_IdAndSession_Id(classId, sessionId)
+                .orElseThrow(() -> new ResourceNotFoundException("Fee structure not found for class and session"));
+
+        List<Fee> feeEntries = new ArrayList<>();
+        LocalDate currentMonth = session.getStartDate().withDayOfMonth(1);
+
+        for (int i = 0; i < 12; i++)
+        {
+            Fee fee = new Fee();
+            fee.setMonth(FeeMonth.valueOf(currentMonth.getMonth().toString()));
+            fee.setYear(currentMonth.getYear());
+            fee.setStatus(FeeStatus.PENDING);
+            fee.setAmount(feeStructure.getFeesAmount());
+            fee.setFeeStructure(feeStructure);
+            fee.setDueDate(currentMonth.withDayOfMonth(15));
+            fee.setStudent(student);
+
+            feeEntries.add(fee);
+            currentMonth = currentMonth.plusMonths(1);
+        }
+
+        feeRepository.saveAll(feeEntries);
+    }
+
+    private void validateStudentIsActive(Student student)
+    {
+        if (!student.getStatus().equals(UserStatus.ACTIVE))
+        {
+            log.info("Update not allowed. Student with PAN {} has status: {}", student.getPanNumber(), student.getStatus());
+            throw new WrongArgumentException("Only active students can be changed. Student with PAN "
+                    + student.getPanNumber() + " is currently " + student.getStatus().name().toLowerCase() + ".");
+        }
+    }
+
+    private void validateSessionIsActive(Student student)
+    {
+        if (!student.getSession().isActive())
+        {
+            throw new WrongArgumentException("Cannot update student because the session is inactive");
+        }
     }
 
     private StudentResponseDto convertToDto(Student student)
@@ -379,7 +416,6 @@ public class StudentServiceImpl implements StudentService
 
         if (currentMonthFeeOpt.isPresent() && "paid".equalsIgnoreCase(currentMonthFeeOpt.get().getStatus()))
         {
-            // Current month paid
             dto.setFeeStatus(FeeStatus.PAID);
             dto.setFeeCatalogStatus(FeeCatalogStatus.UP_TO_DATE);
             return;
@@ -387,53 +423,41 @@ public class StudentServiceImpl implements StudentService
 
         if (today.getDayOfMonth() <= 15)
         {
-            // On or before 15th and current month fee not paid
-            if (previousMonthFeeOpt.isPresent()
-                    && "paid".equalsIgnoreCase(previousMonthFeeOpt.get().getStatus()))
+            if (previousMonthFeeOpt.isPresent() && "paid".equalsIgnoreCase(previousMonthFeeOpt.get().getStatus()))
             {
                 dto.setFeeStatus(FeeStatus.PENDING);
                 dto.setFeeCatalogStatus(FeeCatalogStatus.PENDING);
                 return;
             }
-            // If no previous month or not paid, treat as pending as well
             dto.setFeeStatus(FeeStatus.PENDING);
             dto.setFeeCatalogStatus(FeeCatalogStatus.PENDING);
             return;
         }
         else
         {
-            // After 15th
             if (currentMonthFeeOpt.isEmpty())
             {
-                // No current month fee submitted → OVERDUE
                 dto.setFeeStatus(FeeStatus.OVERDUE);
                 dto.setFeeCatalogStatus(FeeCatalogStatus.OVERDUE);
                 return;
             }
 
-            // Check if previous month is overdue
-            if (previousMonthFeeOpt.isPresent()
-                    && "overdue".equalsIgnoreCase(previousMonthFeeOpt.get().getStatus()))
+            if (previousMonthFeeOpt.isPresent() && "overdue".equalsIgnoreCase(previousMonthFeeOpt.get().getStatus()))
             {
                 dto.setFeeStatus(FeeStatus.OVERDUE);
                 dto.setFeeCatalogStatus(FeeCatalogStatus.OVERDUE);
                 return;
             }
 
-            // Otherwise default to pending if current month fee exists but not paid
-            if (currentMonthFeeOpt.isPresent() &&
-                    !"paid".equalsIgnoreCase(currentMonthFeeOpt.get().getStatus()))
+            if (currentMonthFeeOpt.isPresent() && !"paid".equalsIgnoreCase(currentMonthFeeOpt.get().getStatus()))
             {
-                dto.setFeeStatus(FeeStatus.PENDING);
-                dto.setFeeCatalogStatus(FeeCatalogStatus.PENDING);
+                dto.setFeeStatus(FeeStatus.OVERDUE);
+                dto.setFeeCatalogStatus(FeeCatalogStatus.OVERDUE);
                 return;
             }
         }
 
-        // Default fallback
         dto.setFeeStatus(FeeStatus.PENDING);
         dto.setFeeCatalogStatus(FeeCatalogStatus.PENDING);
     }
-
-
 }
